--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="EmojiX es una librería de emojis que te permite buscar y guardar tus favoritos." />
     <title>EmojiX | Librería de Emojis.</title>
+    <meta name="author" content="NopAngel">
+    <meta property="og:title" content="EmojiX | Librería de Emojis" />
+    <meta property="og:description" content="Descubre y comparte emojis con EmojiX, tu librería de emojis favorita." />
+    
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@EmojiX" />
+    <meta name="twitter:title" content="EmojiX | Librería de Emojis" />
+    <meta name="twitter:description" content="Descubre y comparte emojis con EmojiX, tu librería de emojis favorita." />
+    <meta name="twitter:image" content="/logo.png" />
   </head>
   <body>
     <div id="app"></div>
